fixed bug with adding a existing material to gpu + added PUT support